--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
             ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
         - name: Test SSH Connection
-          run: ssh -o StrictHostKeyChecking=no ubuntu@your-ec2-public-ip "echo 'SSH Connection Successful'"
+          run: ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "echo 'SSH Connection Successful'"
 
   # Job to deploy the application
   deploy:
